--- a/calcular.html
+++ b/calcular.html
@@ -6,6 +6,10 @@
     <title>Calcular média</title>
 </head>
 <body>
-    
+    <h1>Calcular méia de 1 aluno</h1>
+    <input type="number"max="100" iD="nota1" placeholder="insira nota1">
+    <input type="number"max="100" iD="nota2" placeholder="insira nota2">
+
+
 </body>
 </html>
